code/iptables配置/iptables
# Generated by iptables-save v1.3.5 on Thu May 12 00:28:44 2016
*nat
:PREROUTING ACCEPT [51508:5111349]
:POSTROUTING ACCEPT [41:2666]
:OUTPUT ACCEPT [42:2742]
-A PREROUTING -d 115.156.209.253 -p tcp -m tcp --dport 8480 -j DNAT --to-destination 192.168.3.217:8480 
-A PREROUTING -d 115.156.209.253 -p tcp -m tcp --dport 8400 -j DNAT --to-destination 192.168.3.217:8400 
-A PREROUTING -d 115.156.209.253 -p tcp -m tcp --dport 45002 -j DNAT --to-destination 192.168.3.43:8080
-A PREROUTING -s 192.168.3.0/255.255.255.0 -i eth0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128 
#-A PREROUTING -s 192.168.3.0/255.255.255.0 -i eth0 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 3129 
-A POSTROUTING -s 192.168.2.0/255.255.255.0 -j MASQUERADE 
-A POSTROUTING -s 192.168.3.0/255.255.255.0 -j MASQUERADE 
-A POSTROUTING -d 192.168.3.217 -p tcp -m tcp --dport 8480 -j SNAT --to-source 192.168.3.216 
-A POSTROUTING -d 192.168.3.217 -p tcp -m tcp --dport 8400 -j SNAT --to-source 192.168.3.216 
-A POSTROUTING -d 192.168.3.43 -p tcp -m tcp --dport 8080 -j SNAT --to-source 192.168.3.216 
COMMIT
# Completed on Thu May 12 00:28:44 2016
# Generated by iptables-save v1.3.5 on Thu May 12 00:28:44 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5053:933244]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -p tcp -m tcp --dport 3690 -j ACCEPT 
-A INPUT -i ib0 -j ACCEPT 
-A INPUT -i eth0 -j ACCEPT 
-A INPUT -j RH-Firewall-1-INPUT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A FORWARD -s 192.168.2.0/255.255.255.0 -j ACCEPT 
-A FORWARD -d 192.168.2.0/255.255.255.0 -j ACCEPT 
-A FORWARD -s 192.168.3.0/255.255.255.0 -j ACCEPT 
-A FORWARD -d 192.168.3.0/255.255.255.0 -j ACCEPT 
-A FORWARD -s 192.168.3.217 -i eth0 -p tcp -m tcp --sport 8480 -j ACCEPT 
-A FORWARD -d 192.168.3.217 -o eth0 -p tcp -m tcp --dport 8480 -j ACCEPT 
-A FORWARD -s 192.168.3.217 -i eth0 -p tcp -m tcp --sport 8400 -j ACCEPT 
-A FORWARD -d 192.168.3.217 -o eth0 -p tcp -m tcp --dport 8400 -j ACCEPT 
-A FORWARD -s 192.168.3.43 -i eth0 -p tcp -m tcp --sport 8080 -j ACCEPT 
-A FORWARD -d 192.168.3.43 -o eth0 -p tcp -m tcp --dport 8080 -j ACCEPT 
-A RH-Firewall-1-INPUT -i lo -j ACCEPT 
-A RH-Firewall-1-INPUT -i eth0 -j ACCEPT 
-A RH-Firewall-1-INPUT -i ib0 -j ACCEPT 
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A RH-Firewall-1-INPUT -p esp -j ACCEPT 
-A RH-Firewall-1-INPUT -p ah -j ACCEPT 
-A RH-Firewall-1-INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT 
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -p udp -m udp --dport 123 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 123 -j ACCEPT 
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 21 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 9001 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 8480 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 8400 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 45002 -j ACCEPT 
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Thu May 12 00:28:44 2016
